--- a/sensores-deployment.yml
+++ b/sensores-deployment.yml
@@ -21,6 +21,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 8000
+          resources:
+            requests:
+              cpu: 40m
+              memory: 40Mi
+            limits:
+              cpu: 60m
+              memory: 60Mi
 
 ---
 apiVersion: v1
